# NEAR-Yield

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.keeper  LICENSE  README.md  docker-compose.monitoring.yml  docker-compose.yml  nginx.conf  package-lock.json
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
config/: security.yaml
docs/api/: README.md
monitoring/: prometheus.yml
scripts/: backup.sh  deploy.sh
yield-mvp/: .env.example  .gitignore  Dockerfile  Dockerfile.ml  README.md  docker-compose.yml  ml-requirements.txt  package-lock.json  package.json  redis-config.js  requirements.txt
yield-mvp/agents/ai-service/: Cargo.toml  config.toml  requirements.txt
yield-mvp/agents/ai-service/src/: api_tests.rs  backend.py  config.py  config.rs  dashboard.py  langchain_service.py  main.py  main.rs  optimizer.rs  performance.rs  protocols.rs  sentiment.rs  twitter_service.py  workflow_manager.rs
yield-mvp/agents/ai-service/src/database/: db.py
yield-mvp/agents/ai-service/src/middleware/: security.py
yield-mvp/agents/ai-service/src/routes/: health.py
yield-mvp/agents/ai-service/src/scripts/: backup.py
yield-mvp/agents/ai-service/src/services/: cryptopanic_client.py  reddit_client.py  sentiment_aggregator.py  sentiment_analyzer.py  stream_service.py
yield-mvp/agents/ai-service/src/utils/: logger.py
yield-mvp/agents/near-agent/: Cargo.toml
yield-mvp/agents/near-agent/src/: lib.rs  tests.rs
yield-mvp/contracts/safety-proxy/: Cargo.toml
yield-mvp/contracts/safety-proxy/src/: lib.rs
(+220 files in other folders)
