[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
google-cloud-secret-manager = "0.1"
near-sdk = "4.1"
