[package]
name = "near-yield-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
