[package]
name = "safety-proxy"
version = "0.1.0"
authors = ["NEAR Agents"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
